[package]
name = "javelin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
aws-smithy-http = "0.55.2"
clap = { version = "4.2.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
